店舗代表者の認証追加

--- a/src/public/css/manager_manage.css
+++ b/src/public/css/manager_manage.css
@@ -56,6 +56,15 @@ li {
     text-align: center;
 }
 
+.header__logout--button{
+    border: none;
+    background: none;
+    color: #fff;
+    font-size: 20px;
+    font-family: inherit;
+    font-weight: 500;
+}
+
 .header a {
     color: #fff;
 }
