add:レビューの画像投稿機能

--- a/src/public/css/common_m.css
+++ b/src/public/css/common_m.css
@@ -57,6 +57,15 @@ li {
     margin-bottom: 30px;
 }
 
+.header__logout--button{
+    border: none;
+    background: none;
+    color: #fff;
+    font-size: 20px;
+    font-family: inherit;
+    font-weight: 500;
+}
+
 .header a {
     color: #fff;
 }
