--- a/src/public/css/review.css
+++ b/src/public/css/review.css
@@ -152,6 +152,24 @@ textarea {
     margin-bottom: 30px;
 }
 
+.upload-area {
+    width: 100%;
+    height: 200px;
+    border: 2px dashed #cccccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+    background-color: #f9f9f9;
+}
+
+.upload-area.dragover {
+    border-color: #333333;
+    background-color: #e9e9e9;
+}
+
 /* .dropzone .large-text {
     font-size: 2rem;
     line-height: 4rem;
