--- a/src/public/css/common_m.css
+++ b/src/public/css/common_m.css
@@ -40,7 +40,7 @@ li {
 
 .header {
     width: 100%;
-    background-color: #0000cd;
+    background-color: #009699;
     color: #fff;
     padding: 20px 0;
 }
