--- a/src/public/css/manager_manage.css
+++ b/src/public/css/manager_manage.css
@@ -40,7 +40,8 @@ li {
 
 .header {
     width: 100%;
-    background-color: #333333;
+    background-color: #000080
+    ;
     color: #fff;
     padding: 25px 0;
 }
@@ -143,7 +144,7 @@ h2 {
     margin-bottom: 50px;
     font-size: 1.8rem;
     border: none;
-    background: #808080;
+    background: #000080;
     color: #fff;
 }
 
@@ -234,7 +235,8 @@ h2 {
     margin-top: 30px;
     font-size: 1.8rem;
     border: none;
-    background: #808080;
+    background: #000080
+    ;
     color: #fff;
 }
 
@@ -337,8 +339,8 @@ td {
 }
 
 .pagination .active {
-    background-color: #0066ff;
-    border: 1px solid #0066ff;
+    background-color: #000080;
+    border: 1px solid #000080;
     color: white;
 }
 
