--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -50,7 +50,7 @@
     width: 47%;
     height: 70%;
     margin-top: -50px;
-    background: #0066ff;
+    background: #7dd0d1;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     color: #fff;
@@ -92,7 +92,7 @@
     margin-top: 20px;
     margin-bottom: 30px;
     border: none;
-    background: #3399ff;
+    background: #00c9cc;
     color: #fff;
 }
 
@@ -223,7 +223,7 @@
 
 .reservation__form--confirm {
     width: 95%;
-    background: #3399ff;
+    background: #00c9cc;
     border-radius: 5px;
     padding: 30px 20px;
     margin-bottom: 250px;
@@ -255,7 +255,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: #0033ff;
+    background-color: #006466;
     border: none;
     border-radius: 0 0 5px 5px;
     color: #fff;
@@ -286,7 +286,6 @@
     .reservation__form {
         width: 100%;
         margin-top: 50px;
-        background: #0066ff;
         box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
         border-radius: 5px;
         color: #fff;
