--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -31,7 +31,7 @@
     left: 0;
     width: 100%;
     height: 25%;
-    background: #0066ff;
+    background: #009699;
     border-radius: 5px 5px 0 0;
     z-index: 90;
 }
@@ -91,7 +91,7 @@
     font-size: 1.6rem;
     border: none;
     border-radius: 5px;
-    background: #0066ff;
+    background: #009699;
     color: #fff;
     cursor: pointer;
 }
