--- a/src/public/css/review.css
+++ b/src/public/css/review.css
@@ -77,7 +77,7 @@ h1 {
 .card__button--details {
     border: none;
     padding: 8px 12px;
-    background: #0066ff;
+    background: #009699;
     margin-bottom: 13px;
     display: inline-block;
     color: #fff;
@@ -94,7 +94,7 @@ h1 {
 }
 
 .favorite {
-    color: red;
+    color: #d10300;
 }
 
 .not-favorite {
@@ -153,7 +153,7 @@ textarea {
 }
 
 .upload-area {
-    width: 100%;
+    width: 80%;
     height: 200px;
     border: 2px dashed #cccccc;
     display: flex;
@@ -170,16 +170,6 @@ textarea {
     background-color: #e9e9e9;
 }
 
-/* .dropzone .large-text {
-    font-size: 2rem;
-    line-height: 4rem;
-    font-weight: 700;
-}
-
-.dropzone .small-text {
-    font-size: 1.5rem;
-} */
-
 .review-btn {
     width: 100%;
     position: absolute;
@@ -195,7 +185,7 @@ textarea {
     padding: 15px 30px;
     border-radius: 20px;
     border: none;
-    background: #ffffff;
+    background: #7dd0d1;
     font-size: 1.6rem;
     font-weight: 700;
 }
