--- a/src/public/css/review.css
+++ b/src/public/css/review.css
@@ -120,7 +120,7 @@ h3 {
     font-size: 2.3rem;
 }
 
-.star-rating {
+.star-rating-create {
     margin-top: 10px;
 }
 
@@ -232,7 +232,7 @@ textarea {
         text-align: center;
     }
 
-    .star-rating {
+    .star-rating-create {
         width: 100%;
         display: flex;
         justify-content: center;
@@ -246,6 +246,10 @@ textarea {
         width: 100%;
         text-align: right;
         font-size: 1.3rem;
+    }
+
+    .upload-area {
+        width: 100%;
     }
 
     .review-btn button {
